packages/ui/src/styles/main.css
* {
    box-sizing: border-box;
}

html, body, #app {
    height: 100%;
}

html {
    --font-monospace: Menlo, Monaco, Consolas, 'Droid Sans Mono', 'Courier New', monospace,
        'Droid Sans Fallback';
    --font-default: -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', 'HelveticaNeue-Light',
        'Ubuntu', 'Droid Sans', sans-serif;
    --default-border-color: lightgrey;
    --default-border-color-modal: var(--default-border-color);
    --border-color-lighter: #f1f1f1;
    --border-color-lighter-darkened: #f1f1f147;
    --base-color-success: #047857;
    --base-color-info: #097bed;
    --base-color-warning: #ffb400;
    --base-color-error: #b91c1c;
    --background-color: white;
    --text-color: black;
    --caret-color: black;
    --scrollbar: #dfdfdf;
    --scrollbar-background: #f3f2f2;
    --link-color: rgb(0, 0, 238);
    --input-disabled-background-color: rgba(239, 239, 239, 0.3);
    --input-disabled-color: rgb(84, 84, 84);
    --button-background-color: white;
    --button-hover-background-color: #f8f8f8;
    --button-text-color: black;
    --button-border-color: #8c8c8c;
    --modal-background-color: white;
    --modal-text-color: black;
    --modal-caret-color: black;
    --modal-border-color: lightgrey;
    --modal-scrollbar: #dfdfdf;
    --modal-scrollbar-background: #f3f2f2;
    --modal-button-background-color: white;
    --modal-button-hover-background-color: #f8f8f8;
    --modal-button-text-color: black;
    --modal-button-border-color: #8c8c8c;
    --sidebar-item-active-color: #f3f3f3;
    --resizer-background-color: #f1f1f1;
    --response-panel-history-select-hover-color: #f7f7f7;
    --response-panel-loader-background-color: #29292969;
    --response-panel-loader-color: #292929;
    --github-button-icon-fill-color: black;
    --cm-string: #a11;
    --cm-boolean: #219;
    --cm-null: #708;
    --cm-number: #164;
    --cm-comment: #940;
    --cm-keyword: #708;
    --cm-variable: #00f;
    --cm-tooltip-background-color: #f5f5f5;
    --cm-selection-background-color: #00000021;
    --cm-selection-match-background-color: #99ff7780;
    --modal-cm-string: #a11;
    --modal-cm-boolean: #219;
    --modal-cm-null: #708;
    --modal-cm-number: #164;
    --modal-cm-comment: #940;
    --modal-cm-keyword: #708;
    --modal-cm-variable: #00f;
    --modal-cm-tooltip-background-color: #f5f5f5;
    --modal-cm-selection-background-color: #00000021;
    --modal-cm-selection-match-background-color: #99ff7780;
    --drop-target-background-color: #ffc0cb1f;
    --workspace-menu-hover-background-color: #dbedff;
    --method-get: #ab7aff;
    --method-post: #9ed06c;
    --method-put: #e17611;
    --method-delete: #d02141;
    --method-patch: #fcca25;
    --method-options: #2bc2f0;
    --method-head: #267aba;
    --socket-header-background-color: #edf2f7;
    --socket-button-background-color: cadetblue;
    --socket-input-disabled-background-color: #fafbfd;
    --socket-green-row-background-color: #ddffb6;
    --valid-env-highlight-color: #2e7d32;
    --valid-env-highlight-background-color: #e8f5e9;
    --invalid-env-highlight-color: #d32f2f;
    --invalid-env-highlight-background-color: #ffebee;
    --modal-valid-env-highlight-color: #2e7d32;
    --modal-valid-env-highlight-background-color: #e8f5e9;
    --modal-invalid-env-highlight-color: #d32f2f;
    --modal-invalid-env-highlight-background-color: #ffebee;
}
/* ... */

